tests/toy/neg/001055_mutation.toylang
program a = { if a then sleep else var a : bool; } .
